--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.11.39",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "@types/react-router-dom": "^5.3.3",
     "apexcharts": "^3.35.3",
     "react": "^18.1.0",
     "react-apexcharts": "^1.4.0",
